Morse-Name-Wayne/MorseName/bin/Release/MorseName.app/Contents/Frameworks/SGSDK.framework/Versions/3.0/Headers/SGSDK.h

#define SGSDK
void sg_Audio_FadeMusicIn(void *mus, int ms);
void sg_Audio_FadeMusicInWithLoops(void *mus, int loops, int ms);
void sg_Audio_FadeMusicOut(int ms);
void sg_Audio_FreeMusic(music *mus);
void sg_Audio_FreeSoundEffect(sound_effect *effect);
int sg_Audio_HasMusic(char *name);
int sg_Audio_HasSoundEffect(char *name);
music sg_Audio_LoadMusic(char *filename);
sound_effect sg_Audio_LoadSoundEffect(char *filename);
music sg_Audio_MapMusic(char *name, char *filename);
sound_effect sg_Audio_MapSoundEffect(char *name, char *filename);
void sg_Audio_MusicFilename(void *mus, char *result);
void sg_Audio_MusicName(void *mus, char *result);
music sg_Audio_MusicNamed(char *name);
int sg_Audio_MusicPlaying();
float sg_Audio_MusicVolume();
void sg_Audio_OpenAudio();
void sg_Audio_PlayMusicWithLoops(void *mus, int loops);
void sg_Audio_PlaySoundEffectWithLoopAndVolume(void *effect, int loops, float vol);
void sg_Audio_ReleaseAllMusic();
void sg_Audio_ReleaseAllSoundEffects();
void sg_Audio_ReleaseMusic(char *name);
void sg_Audio_ReleaseSoundEffect(char *name);
void sg_Audio_SetMusicVolume(float value);
void sg_Audio_SoundEffectFilename(void *effect, char *result);
void sg_Audio_SoundEffectName(void *effect, char *result);
sound_effect sg_Audio_SoundEffectNamed(char *name);