ScreenSaver/lib/sgsdk.pas

  
  procedure sg_Audio_FadeMusicIn(mus: Music; ms: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_FadeMusicIn');
    {$ENDIF}
  
    try 
      sgAudio.FadeMusicIn(mus, ms);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_FadeMusicIn');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_FadeMusicIn');
    {$ENDIF}
  end;
  
  procedure sg_Audio_FadeMusicInWithLoops(mus: Music; loops: LongInt; ms: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_FadeMusicInWithLoops');
    {$ENDIF}
  
    try 
      sgAudio.FadeMusicIn(mus, loops, ms);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_FadeMusicInWithLoops');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_FadeMusicInWithLoops');
    {$ENDIF}
  end;
  
  procedure sg_Audio_FadeMusicOut(ms: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_FadeMusicOut');
    {$ENDIF}
  
    try 
      sgAudio.FadeMusicOut(ms);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_FadeMusicOut');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_FadeMusicOut');
    {$ENDIF}
  end;
  
  procedure sg_Audio_FreeMusic(var mus: Music); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_FreeMusic');
    {$ENDIF}
  
    try 
      sgAudio.FreeMusic(mus);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_FreeMusic');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_FreeMusic');
    {$ENDIF}
  end;
  
  procedure sg_Audio_FreeSoundEffect(var effect: SoundEffect); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_FreeSoundEffect');
    {$ENDIF}
  
    try 
      sgAudio.FreeSoundEffect(effect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_FreeSoundEffect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_FreeSoundEffect');
    {$ENDIF}
  end;
  
  function sg_Audio_HasMusic(name: PChar): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_HasMusic');
    {$ENDIF}
    
    try
      result := sgAudio.HasMusic(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_HasMusic');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_HasMusic');
    {$ENDIF}
  end;
  
  function sg_Audio_HasSoundEffect(name: PChar): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_HasSoundEffect');
    {$ENDIF}
    
    try
      result := sgAudio.HasSoundEffect(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_HasSoundEffect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_HasSoundEffect');
    {$ENDIF}
  end;
  
  function sg_Audio_LoadMusic(filename: PChar): Music; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_LoadMusic');
    {$ENDIF}
    
    try
      result := sgAudio.LoadMusic(filename);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_LoadMusic');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_LoadMusic');
    {$ENDIF}
  end;
  
  function sg_Audio_LoadSoundEffect(filename: PChar): SoundEffect; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_LoadSoundEffect');
    {$ENDIF}
    
    try
      result := sgAudio.LoadSoundEffect(filename);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_LoadSoundEffect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_LoadSoundEffect');
    {$ENDIF}
  end;
  
  function sg_Audio_MapMusic(name: PChar; filename: PChar): Music; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_MapMusic');
    {$ENDIF}
    
    try
      result := sgAudio.MapMusic(name, filename);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_MapMusic');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_MapMusic');
    {$ENDIF}
  end;
  
  function sg_Audio_MapSoundEffect(name: PChar; filename: PChar): SoundEffect; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_MapSoundEffect');
    {$ENDIF}
    
    try
      result := sgAudio.MapSoundEffect(name, filename);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_MapSoundEffect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_MapSoundEffect');
    {$ENDIF}
  end;
  
  procedure sg_Audio_MusicFilename(mus: Music; result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_MusicFilename');
    {$ENDIF}
    
    try
      result_temp := sgAudio.MusicFilename(mus);
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_MusicFilename');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_MusicFilename');
    {$ENDIF}
  end;
  
  procedure sg_Audio_MusicName(mus: Music; result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_MusicName');
    {$ENDIF}
    
    try
      result_temp := sgAudio.MusicName(mus);
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_MusicName');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_MusicName');
    {$ENDIF}
  end;
  
  function sg_Audio_MusicNamed(name: PChar): Music; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_MusicNamed');
    {$ENDIF}
    
    try
      result := sgAudio.MusicNamed(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_MusicNamed');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_MusicNamed');
    {$ENDIF}
  end;
  
  function sg_Audio_MusicPlaying(): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_MusicPlaying');
    {$ENDIF}
    
    try
      result := sgAudio.MusicPlaying();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_MusicPlaying');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_MusicPlaying');
    {$ENDIF}
  end;
  
  function sg_Audio_MusicVolume(): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_MusicVolume');
    {$ENDIF}
    
    try
      result := sgAudio.MusicVolume();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_MusicVolume');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_MusicVolume');
    {$ENDIF}
  end;
  
  procedure sg_Audio_OpenAudio(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_OpenAudio');
    {$ENDIF}
  
    try 
      sgAudio.OpenAudio();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_OpenAudio');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_OpenAudio');
    {$ENDIF}
  end;
  
  procedure sg_Audio_PlayMusicWithLoops(mus: Music; loops: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_PlayMusicWithLoops');
    {$ENDIF}
  
    try 
      sgAudio.PlayMusic(mus, loops);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_PlayMusicWithLoops');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_PlayMusicWithLoops');
    {$ENDIF}
  end;
  
  procedure sg_Audio_PlaySoundEffectWithLoopAndVolume(effect: SoundEffect; loops: LongInt; vol: Single); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_PlaySoundEffectWithLoopAndVolume');
    {$ENDIF}
  
    try 
      sgAudio.PlaySoundEffect(effect, loops, vol);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_PlaySoundEffectWithLoopAndVolume');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_PlaySoundEffectWithLoopAndVolume');
    {$ENDIF}
  end;
  
  procedure sg_Audio_ReleaseAllMusic(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_ReleaseAllMusic');
    {$ENDIF}
  
    try 
      sgAudio.ReleaseAllMusic();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_ReleaseAllMusic');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_ReleaseAllMusic');
    {$ENDIF}
  end;
  
  procedure sg_Audio_ReleaseAllSoundEffects(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_ReleaseAllSoundEffects');
    {$ENDIF}
  
    try 
      sgAudio.ReleaseAllSoundEffects();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_ReleaseAllSoundEffects');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_ReleaseAllSoundEffects');
    {$ENDIF}
  end;
  
  procedure sg_Audio_ReleaseMusic(name: PChar); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_ReleaseMusic');
    {$ENDIF}
  
    try 
      sgAudio.ReleaseMusic(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_ReleaseMusic');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_ReleaseMusic');
    {$ENDIF}
  end;
  
  procedure sg_Audio_ReleaseSoundEffect(name: PChar); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_ReleaseSoundEffect');
    {$ENDIF}
  
    try 
      sgAudio.ReleaseSoundEffect(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_ReleaseSoundEffect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_ReleaseSoundEffect');
    {$ENDIF}
  end;
  
  procedure sg_Audio_SetMusicVolume(value: Single); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_SetMusicVolume');
    {$ENDIF}
  
    try 
      sgAudio.SetMusicVolume(value);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_SetMusicVolume');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_SetMusicVolume');
    {$ENDIF}
  end;
  
  procedure sg_Audio_SoundEffectFilename(effect: SoundEffect; result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_SoundEffectFilename');
    {$ENDIF}
    
    try
      result_temp := sgAudio.SoundEffectFilename(effect);
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_SoundEffectFilename');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_SoundEffectFilename');
    {$ENDIF}
  end;
  
  procedure sg_Audio_SoundEffectName(effect: SoundEffect; result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_SoundEffectName');
    {$ENDIF}
    
    try
      result_temp := sgAudio.SoundEffectName(effect);
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_SoundEffectName');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_SoundEffectName');
    {$ENDIF}
  end;
  
  function sg_Audio_SoundEffectNamed(name: PChar): SoundEffect; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_SoundEffectNamed');
    {$ENDIF}
    
    try
      result := sgAudio.SoundEffectNamed(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_SoundEffectNamed');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_SoundEffectNamed');
    {$ENDIF}
  end;
